--- a/templates/index.html
+++ b/templates/index.html
@@ -214,7 +214,7 @@
               <div class="card">
 
                 <div class="card-body">
-                  <h5 class="card-title">Reports <span>/Today</span></h5>
+                  <h5 class="card-title">Reports_{{TA[0]}}<span>recently</span></h5>
 
                   <!-- Line Chart -->
                   <div id="reportsChart"></div>
